Добавил комментарии к коду

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -96,7 +96,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="clear1symbol.png" />
+    <Resource Include="Resources\clearSymbol.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
